--- a/frontend/src/css/Hero.css
+++ b/frontend/src/css/Hero.css
@@ -1,9 +1,9 @@
 .hero-content {
   position: absolute;
   top: 30%;
-  right: 0;
-  left: 0;
   bottom: 0;
+  left: 0;
+  right: 0;
 }
 
 .hero-content>h1 {
@@ -13,7 +13,11 @@
   animation-timing-function: cubic-bezier(0.21, 1.11, 0.81, 0.99);
 }
 
-.hero-content>h2 {
+.hero-content__subtitle-container {
+  overflow: hidden;
+}
+
+.hero-content__subtitle-container>h2 {
   animation-name: slide-from-right;
   animation-duration: 1.2s;
   animation-fill-mode: forwards;
@@ -25,7 +29,7 @@
     font-size: 2.5rem;
   }
 
-  .hero-content>h2 {
+  .hero-content__subtitle-container>h2 {
     font-size: 1.2rem;
   }
 }
